BugFix: cut too much CSS

--- a/adoc.css
+++ b/adoc.css
@@ -51,6 +51,16 @@ display: block;
 margin-left: auto;
 margin-right: auto;
 }*/
+
+img {
+    display:flex;
+max-width: 100%;
+height: 100%;
+max-height: 33vh;
+vertical-align: middle;
+width: auto;
+margin: auto;
+}
 ul {
 list-style-type: circle;
 padding-left: 1.5em;
@@ -124,12 +134,8 @@ video{
     max-width: 30vw;
     max-height: 30vh;
 }
-img {
-    display:flex;
-    max-width: 100%;
+.content{
     height: 100%;
-    max-height: 33vh;
-    margin: auto;
 }
 .imageblock{
     height: 100%;
